--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <nav class="menu">
             <!-- Begin of Menu List -->
             <ul>
-                <li><a href="#">HOME</a></li>
+                <li><a href="index.html">HOME</a></li>
                 <li><a href="#">SOBRE</a></li>
-                <li><a href="#">CONTATO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
             </ul>
             <!-- End of Menu List -->
         </nav>
