--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <!-- Link to css style file -->
     <link rel="stylesheet" type="text/css" href="_style/style.css" />
+    <link rel="stylesheet" type="text/css" href="_style/style-media-query.css" />
 
     <!-- Link to google fonts Lato -->
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
@@ -38,7 +39,7 @@
                    <li><a href="#"><i class="fab fa-facebook"></i></i> </a></li>
                     <li><a href="https://github.com/joaomcode" target="_black" ><i class="fab fa-github"></i> </a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
-                    <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+                    <li><a href="https://www.youtube.com/channel/UCERw14Ka8SlRN0whBbuQ6_Q?view_as=subscriber" target="_black"><i class="fab fa-youtube"></i> </a></li>
                 </ul>
             </div>
             <!-- End of Social Networks -->
@@ -47,21 +48,23 @@
             <button class="btn-menu">
                 <i class="fas fa-bars"></i>
             </button>
-            <!-- End of Bars Button -->            
+            <!-- End of Bars Button -->
+
+            <!-- Begin of Menu -->
+            <nav class="menu">
+                <!-- Begin of Menu List -->
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">SOBRE</a></li>
+                    <li><a href="contato.html">CONTATO</a></li>
+                </ul>
+                <!-- End of Menu List -->
+            </nav>
+            <!-- End of Menu --> 
         </div>
         <!-- End of Container -->
 
-        <!-- Begin of Menu -->
-        <nav class="menu">
-            <!-- Begin of Menu List -->
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="#">SOBRE</a></li>
-                <li><a href="contato.html">CONTATO</a></li>
-            </ul>
-            <!-- End of Menu List -->
-        </nav>
-        <!-- End of Menu -->
+            
 
         <!-- Begin of Script Open/Close Bars Button -->
         <script type="text/javascript">
@@ -73,9 +76,11 @@
         <!-- End of Script Open/Close Bars Button -->
 
         <!-- Begin of Logo -->
-        <a href="index.html">
-          <h1 class="logo">joaomcode</h1>
-        </a>
+        <div class="logo">
+            <a href="index.html">
+              <h1>joaomcode</h1>
+            </a>            
+        </div>
         <!-- End of Logo -->
     </header>
     <!-- End of Header -->
@@ -171,18 +176,16 @@
     </section>
     <!-- End of Couses -->
 
-
-
     <!-- Begin of footer -->
     <footer>
-        <p>Entre em contato</p>
+        <div class="footer-text">Entre em contato: 0800 123 4567 | SAC: 123 45</div>
      <!-- Begin of Social Networks -->
-        <div class="header-social">
+        <div class="footer-social">
             <ul>
                <li><a href="#"><i class="fab fa-facebook"></i></i> </a></li>
                 <li><a href="https://github.com/joaomcode" target="_black" ><i class="fab fa-github"></i> </a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i> </a></li>
-                <li><a href="#"><i class="fab fa-youtube"></i> </a></li>
+                <li><a href="https://www.instagram.com/joaomcode/" target="_black"><i class="fab fa-instagram"></i> </a></li>
+                <li><a href="https://www.youtube.com/channel/UCERw14Ka8SlRN0whBbuQ6_Q?view_as=subscriber" target="_black"><i class="fab fa-youtube"></i> </a></li>
             </ul>
         </div>
         <!-- End of Social Networks -->
